<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Spotify">Spotify Streamer</string>
    <string name="Scores">Scores App</string>
    <string name="Library">Library App</string>
    <string name="Build">Build It Bigger</string>
    <string name="xyz">XYZ Reader</string>
    <string name="cap">Capstone: My Own App</string>
</resources>
