<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#F08C35"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="My Nanodegree Apps!" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:height="40dp"
        android:textSize="20dp" />

    <Button
        style="@style/LauncherButtons"
        android:text="@string/Spotify"
        android:id="@+id/bSpotify"
        android:layout_below="@+id/tHeader" />

    <Button
        style="@style/LauncherButtons"
        android:text="@string/Scores"
        android:id="@+id/bScores"
        android:layout_below="@+id/bSpotify" />

    <Button
        style="@style/LauncherButtons"
        android:text="@string/Library"
        android:id="@+id/bLibrary"
        android:layout_below="@+id/bScores" />

    <Button
        style="@style/LauncherButtons"
        android:text="@string/Build"
        android:id="@+id/bBuilt"
        android:layout_below="@+id/bLibrary" />

    <Button
        style="@style/LauncherButtons"
        android:text="@string/xyz"
        android:id="@+id/bBacon"
        android:layout_below="@+id/bBuilt" />

    <Button
        style="@style/LauncherButtons"
        android:text="@string/cap"
        android:id="@+id/bCap"
        android:layout_below="@+id/bBacon" />
</RelativeLayout>
